# wlcursorfix

./: .gitignore  README.md  flake.nix  meson.build  wlcursorfix.c
